:white_check_mark: Se mejorón los estilos, se agregarón los tag de SEO y se agregó un README al repositorio

--- a/public/index.html
+++ b/public/index.html
@@ -1,27 +1,59 @@
 <!doctype html>
 <html lang="es">
 	<head>
-		<meta charset="utf-8" />
-		<!-- <meta name="referrer" content="no-referrer-when-downgrade" /> -->
-		<title>Helvetica Neue</title>
-		<meta name="description" content="A Grid Experiment" />
+		<meta charset="UTF-8" />
+		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<meta
+			name="description"
+			content="Uso de Helvetica Neue y CSS Grid, una combinación perfecta de elegancia y funcionalidad."
+		/>
+		<meta name="robots" content="index,follow" />
+		<meta property="og:url" content="https://galeedgutierrez.com" />
+		<meta property="og:type" content="website" />
+		<meta property="og:site_name" content="Galeed Gutierrez" />
+		<meta
+			property="og:description"
+			content="Póster de la tipografía Helvetica Neue utilizando CSS Grid"
+		/>
+		<meta property="og:title" content="Galeed Gutierrez" />
+		<meta
+			property="og:image"
+			content="https://drive.google.com/uc?id=1jtUv4OkP1EmE3VyOK5hPytfbwmALEXUm"
+		/>
+		<meta property="og:locale" content="es_ES" />
+		<meta name="twitter:card" content="summary_large_image" />
+		<meta name="twitter:title" content="Galeed Gutierrez" />
+		<meta
+			name="twitter:description"
+			content="Póster de la tipografía Helvetica Neue utilizando CSS Grid"
+		/>
+		<meta
+			name="twitter:image"
+			content="https://drive.google.com/uc?id=1jtUv4OkP1EmE3VyOK5hPytfbwmALEXUm"
+		/>
+		<meta name="twitter:site" content="@GutierrezGaleed" />
+		<meta name="twitter:creator" content="@GutierrezGaleed" />
+		<link rel="icon" href="~@images/favicon.ico" type="any" />
+		<link rel="icon" href="~@images/favicon.svg" type="image/svg+xml" />
+		<link rel="apple-touch-icon" href="~@images/apple-touch-icon.png" />
+		<title>Helvetica Neue</title>
 	</head>
 
 	<body>
-		<main class="grid">
+		<main class="grid" id="main">
 			<h1 class="title"><strong>Helvetica</strong> Neue</h1>
 			<div class="title-block"></div>
-			<h3 class="quote quote1">In war</h3>
+			<h2 class="quote quote1">In war</h2>
 			<h3 class="quote quote2">truth</h3>
-			<h5 class="quote quote3">is the first casuality</h5>
-			<div class="attribution">
+			<h4 class="quote quote3">is the first casuality</h4>
+			<h5 class="attribution">
 				<cite>by <strong>Aeschylus</strong></cite>
-			</div>
-			<div class="uppercase">
+			</h5>
+			<h6 class="uppercase">
 				<p><strong>ABCDEFGHI</strong></p>
 				<p>JKLMNOPQRSTUVWXYZ</p>
-			</div>
+			</h6>
 			<div class="lowercase">
 				<p>abcdef</p>
 				<p>ghijklmnopqr</p>
@@ -47,5 +79,22 @@
 			defer
 			src="https://www.googletagmanager.com/gtag/js?id=G-M8H4YB694S"
 		></script>
+		<script type="application/ld+json">
+			{
+				"@context": "https://schema.org",
+				"@type": "CollectionPage",
+				"name": "Helvetica Neue",
+				"description": "Uso de Helvetica Neue y CSS Grid, una combinación perfecta de elegancia y funcionalidad.",
+				"url": "https://galeedgutierrez.com/Curso-CSS-Grid-a-fondo-Codely-2021/",
+				"author": {
+					"@type": "Person",
+					"name": "Galeed Gutierrez"
+				},
+				"mainContentOfPage": {
+					"@type": "WebPageElement",
+					"cssSelector": "#main"
+				}
+			}
+		</script>
 	</body>
 </html>
